# Mallows-permutation

./: CMakeLists.txt  README.md  main.cpp
src/: MallowsPermutation.cpp  MallowsPermutation.h
src/rndm/: Dist.h  RandomGenerator.cpp  RandomGenerator.h  UniformInteger.cpp  UniformInteger.h  UniformZeroOne.cpp  UniformZeroOne.h
